<resources>
    <string name="app_name">Joisty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Joisty</string>
    <string name="nav_header_subtitle">Joist Designer Application, Ajman Inc.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Joist Designs</string>
    <string name="menu_joist_design">Joist Design Details</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="span_label">Span (m)</string>
    <string name="span_placeholder">Enter Span</string>
    <string name="load_label">Load (kgf/m²)</string>
    <string name="load_placeholder">Enter Load</string>
    <string name="calculate_label">Calculate</string>
    <string name="shear_label">Shear:</string>
    <string name="moment_label">Moment:</string>
    <string name="image_logo_content_description">Project Logo</string>
    <string name="default_project_name">Project Name</string>
    <string name="default_joist_info">6m - Residential</string>
    <string name="default_steel_joist_details">Joist Details: …</string>
    <string name="create">Create</string>
    <string name="action_delete">Delete</string>

    <string name="field_id">ID</string>
    <string name="field_created_at">Created at</string>
    <string name="field_updated_at">Updated at</string>
    <string name="field_joist_details">Joist Details</string>
    <string name="field_joist_height">Joist Height</string>
    <string name="field_joist_arrangement">Joist Arrangement</string>
    <string name="field_slab_thickness">Slab Thickness</string>
    <string name="field_ceiling_height">Ceiling Height</string>
    <string name="field_concrete_grade">Concrete Grade</string>

    <string name="hint_project_name">Project Name</string>
    <string name="hint_joist_length">Joist Length (m)</string>
    <string name="hint_joist_height">Joist Height (cm)</string>
    <string name="hint_slab_thickness">Slab Thickness (cm)</string>
    <string name="hint_ceiling_height">Ceiling Height (cm)</string>

    <string name="label_show_more">Show More</string>
    <string name="label_show_less">Show Less</string>
    <string name="label_analyze">Analyze</string>
    <string name="label_design">Design</string>

    <string name="occupancy_commercial">Commercial</string>
    <string name="occupancy_parking">Parking</string>
    <string name="occupancy_residential">Residential</string>
    <string name="occupancy_roof">Roof</string>

    <string name="joist_arrangement_single_50_with_concrete_web">1 @ 50 cm + Concrete Web</string>
    <string name="joist_arrangement_single_50_without_concrete_web">1 @ 50 cm</string>
    <string name="joist_arrangement_single_70_with_concrete_web">1 @ 70 cm + Concrete Web</string>
    <string name="joist_arrangement_single_70_without_concrete_web">1 @ 70 cm</string>
    <string name="joist_arrangement_single_85_with_concrete_web">2 @ 85 cm + Concrete Web</string>

    <string name="report_section_joist_weight">Joist Weight</string>
    <string name="report_section_structural_dead_load">Structure Dead Load of Ceilings</string>
    <string name="report_section_occupancy_loading">Super-dead Load of Ceilings</string>
    <string name="report_section_flexural_strength_of_composite_section">Flexural Strength of Composite Section</string>
    <string name="report_section_transverse_shear_strength_of_composite_section">Transverse Shear Strength of Composite Section</string>
    <string name="report_section_deflection">Deflection</string>
    <string name="report_section_natural_frequency">Natural Frequency</string>
    <string name="report_section_price_calculation">Price Calculation</string>

    <string name="report_table_joist_weight">Joist Weight</string>
    <string name="report_table_dead_load_structural_ceiling">Structure Dead Load of Ceilings</string>
    <string name="report_table_dead_load_commercial">Super-dead Load of Roof Ceilings</string>
    <string name="report_table_dead_load_parking">Super-dead Load of Parking Ceilings</string>
    <string name="report_table_dead_load_residential">Super-dead Load of Residential Ceilings</string>
    <string name="report_table_dead_load_roof">Super-dead Load of Roof Ceilings</string>
    <string name="report_table_price_breakdown">Price Breakdown</string>

    <string name="report_table_column_amount">Amount</string>
    <string name="report_table_column_area_load">Area Load</string>
    <string name="report_table_column_area_section">Area Section</string>
    <string name="report_table_column_component">Component</string>
    <string name="report_table_column_height">Height</string>
    <string name="report_table_column_length">Length</string>
    <string name="report_table_column_length_ratio">Ratio of Component Length to Ceiling Length</string>
    <string name="report_table_column_price">Price</string>
    <string name="report_table_column_price_per_unit">Price per Unit</string>
    <string name="report_table_column_specific_weight">Specific Weight</string>
    <string name="report_table_column_thickness">Thickness</string>
    <string name="report_table_column_unit">Unit</string>
    <string name="report_table_column_volume">Volume</string>
    <string name="report_table_column_weight">Weight</string>
    <string name="report_table_column_width_ratio">Ratio of Component Width to Ceiling Width</string>

    <string name="report_table_component_top_chord">Top Chord</string>
    <string name="report_table_component_bot_chord">Bottom Chord</string>
    <string name="report_table_component_web_rebar">Web Rebar</string>
    <string name="report_table_component_joist">Joist</string>
    <string name="report_table_component_concrete_slab">Concrete Slab</string>
    <string name="report_table_component_concrete_web">Concrete Web</string>
    <string name="report_table_component_tie">Tie</string>
    <string name="report_table_component_triangular_cut">Triangular Prismatic Cut on Block</string>
    <string name="report_table_component_block">Polystyrene Block</string>
    <string name="report_table_component_mosaic_stone">Mosaic Stone</string>
    <string name="report_table_component_cement_and_sand_mortar">Cement and Sand Mortar</string>
    <string name="report_table_component_concrete_with_mineral_pumice_and_sand">Concrete with Mineral Pumice and Sand</string>
    <string name="report_table_component_plaster_and_soil_mortar">Plaster and Soil Mortar</string>
    <string name="report_table_component_plaster_mortar">Plaster Mortar</string>
    <string name="report_table_component_cement_mosaic">Cement Mosaic</string>
    <string name="report_table_component_two_later_bitumen_coated_bag">Two-Layer Bitumen Coated Bag</string>
    <string name="report_table_component_total">Total</string>
    <string name="colon">: </string>

    <string name="export_as_pdf">Export as PDF</string>

    <string name="menu_price_list">Price List</string>

    <string name="field_price_list_code">Price List Code</string>
    <string name="field_currency">Currency</string>

    <string name="hint_price_list_code">Enter Price List Code</string>
    <string name="hint_currency">Enter Currency</string>
    <string name="hint_plate">Plate Price</string>
    <string name="hint_rebar">Rebar Price</string>
    <string name="hint_angle">Angle Price</string>
    <string name="hint_concrete">Concrete Price</string>
    <string name="hint_block">Block Price</string>

    <string name="label_no">No.</string>
    <string name="label_description">Description</string>
    <string name="label_unit">Unit</string>
    <string name="label_unit_price">Unit Price</string>
    <string name="label_plate">Plate</string>
    <string name="label_rebar">Rebar</string>
    <string name="label_angle">Angle</string>
    <string name="label_concrete">Concrete</string>
    <string name="label_block">Block</string>
    <string name="label_kgf">kgf</string>
    <string name="label_m3">m³</string>
    <string name="label_save">Save</string>
</resources>