<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ajman.shayan.joisty.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_joist_design"
        android:name="ajman.shayan.joisty.fragments.JoistDesignFragment"
        android:label="@string/menu_joist_design"
        tools:layout="@layout/fragment_joist_design" />

    <fragment
        android:id="@+id/nav_price_list"
        android:name="ajman.shayan.joisty.fragments.PriceListFragment"
        android:label="@string/menu_price_list"
        tools:layout="@layout/fragment_price_list" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ajman.shayan.joisty.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ajman.shayan.joisty.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>