<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:clickable="true"
    android:focusable="true">

    <!-- ID, Project Name, Created At, Updated At -->
    <TextView
        android:id="@+id/textViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_id" />

    <EditText
        android:id="@+id/editTextProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_project_name"
        android:autofillHints="Project Name" />

    <TextView
        android:id="@+id/textViewCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_created_at" />

    <TextView
        android:id="@+id/textViewUpdatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_updated_at" />

    <!-- Joist Length and Occupancy -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextJoistLength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_joist_length"
            android:inputType="numberDecimal"
            android:autofillHints="Joist Length (m)" />

        <Spinner
            android:id="@+id/spinnerOccupancy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Show More / Show Less -->
    <TextView
        android:id="@+id/textViewShowMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_show_more"
        android:clickable="true"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/layoutAdditionalFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- Fields for Joist Details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_joist_details"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"/>

            <Spinner
                android:id="@+id/spinnerSteelSectionDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <!-- Fields for Joist Height -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_joist_height"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"/>

            <EditText
                android:id="@+id/editTextJoistHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_joist_height"/>
        </LinearLayout>

        <!-- Fields for Concrete Web -->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Concrete Web"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:paddingEnd="8dp"/>-->

<!--            <CheckBox-->
<!--                android:id="@+id/checkboxConcreteWeb"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </LinearLayout>-->

        <!-- Fields for Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_joist_arrangement"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"/>

            <Spinner
                android:id="@+id/spinnerJoistArrangement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <!-- Fields for Slab Thickness -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_slab_thickness"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"/>

            <EditText
                android:id="@+id/editTextSlabThickness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_slab_thickness"/>
        </LinearLayout>

        <!-- Fields for Ceiling Height -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_ceiling_height"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"/>

            <EditText
                android:id="@+id/editTextCeilingDepth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_ceiling_height"/>
        </LinearLayout>

        <!-- Fields for Concrete Grade -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_concrete_grade"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"/>

            <Spinner
                android:id="@+id/spinnerConcreteGrade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Analyze Button -->
    <Button
        android:id="@+id/buttonAnalyze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_analyze"
        android:textColor="#FFFFFFFF"
        android:onClick="analyzeJoistDesign"/>

    <!-- Analyze Button -->
    <Button
        android:id="@+id/buttonExportAsPdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Export as PDF"
        android:onClick="exportAsPdf"
        android:visibility="gone" />

    <!-- WebView for Table -->
    <WebView
        android:id="@+id/webViewResultTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
